# coffee-forecast

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: monthly_pipeline.yml
.streamlit/: config.toml
docs/superpowers/plans/: 2026-05-28-data-layer.md  2026-05-29-spread-model.md  2026-05-30-vecm-model.md
docs/superpowers/specs/: 2026-05-28-data-layer-design.md  2026-05-29-spread-model-design.md  2026-05-30-vecm-model-design.md
r/: gamlss_fit.R
reports/: monthly_template.qmd
src/coffee_forecast/: alerts.py  logging_config.py  reports.py
src/coffee_forecast/data/: ingest.py  providers.py  resample.py
src/coffee_forecast/db/: __init__.py  migrations.py  schema.sql
src/coffee_forecast/models/: backtest.py  gamlss.py  hybrid.py  spread.py  vecm.py
tests/: test_backtest.py  test_db.py  test_gamlss.py  test_hybrid.py  test_ingest.py  test_providers.py  test_resample.py  test_spread.py  test_vecm.py
tests/models/: test_reports.py
